--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "eslint --ext .ts, ./src/ --fix"
   },
   "engines": {
     "npm": ">=8.0.0",
@@ -29,6 +30,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "husky": "^4.3.8",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.6.2",
     "typescript": "4.7.4"
   }
