--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "eslint --ext .ts, ./src/ --fix"
+    "lint:fix": "eslint --ext .tsx ./src/ --fix"
   },
   "engines": {
     "npm": ">=8.0.0",
